# sandboxd

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  e2e-healthcheck-design.md  networking-design.md  sandbox-design.md
sandboxd/: Cargo.toml
sandboxd/.config/: nextest.toml
sandboxd/contrib/systemd/: sandboxd.service
sandboxd/graphify-out/: .graphify_detect.json  manifest.json
sandboxd/images/lite/: Dockerfile
sandboxd/sandbox-cli/: Cargo.toml
sandboxd/sandbox-cli/src/: backend.rs  backends_cache.rs  cli_xdg.rs  doctor.rs  lib.rs  main.rs  proxy.rs  ssh_commands.rs  ssh_config.rs
sandboxd/sandbox-cli/tests/: events_binary.rs  integration_backends_cache.rs  integration_cfg_migrations_cli.rs  integration_cp_dispatch.rs  integration_describe_verbose.rs  integration_isolation_warning.rs  integration_no_cache_rejection.rs  integration_sync_dispatch.rs  integration_update_fetch.rs  integration_update_flow_idempotent.rs  integration_version_skew.rs  preset_cli.rs
sandboxd/sandbox-core/: Cargo.toml  build.rs
sandboxd/sandbox-core/migrations/: V001__create_sessions.sql  V002__add_network_info.sql  V003__add_policy_tables.sql  V004__port_explicit_policy_rules.sql  V005__session_backend_column.sql  V006__add_owner_and_guest_versions.sql  V007__add_ssh_keypair.sql  V008__add_operator_uid.sql  V009__drop_legacy_operatorless_sessions.sql  V010__add_sshd_ready.sql
sandboxd/sandbox-core/src/: api.rs  atomic_listener_writer.rs  bridge_conf.rs  ca.rs  caller_identity.rs  dns_gate.rs  dns_propagation.rs  error.rs  gateway.rs  guest.rs  lds_ack.rs  lib.rs  lima.rs  network.rs  policy.rs  policy_distributor.rs  process.rs  qmp.rs  session.rs  ssh.rs  store.rs  users_conf.rs  vm_network.rs  workspace_lock.rs  workspace_rsync.rs
sandboxd/sandbox-core/tests/: cross_session_l4_isolation_integration.rs  dns_gate_integration.rs  events_ingest_integration.rs  gateway_integration.rs  integration_container_runtime.rs  integration_gateway_image_pinning.rs  integration_lite_image_build.rs  integration_lite_image_rebuild.rs  integration_lite_image_sshd.rs  integration_lite_image_sshd_cross_user.rs  integration_orphan_reaper.rs  integration_orphan_reaper_cidr.rs  integration_orphan_reaper_coexistence.rs  integration_qemu_wrapper_netdev.rs  integration_session_create_image_contracts.rs  lifecycle_events_integration.rs  lima_integration.rs  migrations.rs  network_integration.rs  qemu_helper_path_lint.rs  update_state_reconcile_allow_list.rs  validators.rs
sandboxd/sandbox-deny-logger/: Cargo.toml
sandboxd/sandbox-deny-logger/src/: conntrack.rs  event.rs  health.rs  limits.rs  main.rs  tcp.rs  udp.rs
sandboxd/sandbox-event-emitter/: Cargo.toml
sandboxd/sandbox-event-emitter/src/: event.rs  health.rs  lib.rs  limits.rs
sandboxd/sandbox-guest/: Cargo.toml
sandboxd/sandbox-guest/src/: main.rs
sandboxd/sandbox-lima-helper/: Cargo.toml
sandboxd/sandbox-lima-helper/src/: main.rs
sandboxd/sandbox-lima-helper/tests/: integration_lima_helper.rs
sandboxd/sandbox-nft-allow-logger/: Cargo.toml
sandboxd/sandbox-nft-allow-logger/src/: main.rs  nfct.rs
sandboxd/sandbox-nft-deny-logger/: Cargo.toml
sandboxd/sandbox-nft-deny-logger/src/: main.rs  nflog.rs  tcp.rs
sandboxd/sandbox-route-helper/: Cargo.toml
sandboxd/sandbox-route-helper/src/: audit.rs  main.rs  pair_check.rs
sandboxd/sandbox-route-helper/tests/: integration_route_helper.rs
sandboxd/sandbox-spawn-helper/: Cargo.toml
sandboxd/sandbox-spawn-helper/src/: main.rs
sandboxd/sandboxd/: Cargo.toml
sandboxd/sandboxd/src/: backends_http.rs  error.rs  events_http.rs  lib.rs  main.rs  policy_http.rs  propagation.rs  proxy_http.rs
sandboxd/sandboxd/tests/: event_ingestion_pipeline.rs  events_http_follow.rs  events_http_non_follow.rs  events_persist_e2e.rs  gateway_deny_pipeline.rs  integration_backends_endpoint.rs  integration_create_session_container.rs  integration_doctor_diagnostics.rs  integration_guest_refresh.rs  integration_local_workspace.rs  integration_nft_allow_logger_ingest.rs  integration_owner_peercred.rs  integration_proxy_websocket.rs  integration_proxy_websocket_lima.rs  integration_rootless_docker.rs  integration_route_helper_propagation.rs  integration_schema_mismatch_refusal.rs  integration_session_create_refused_on_missing_gateway_image.rs  (+10 more)
sandboxd/tests/: integration_test.sh
tests/e2e/: conftest.py  pyproject.toml  test_cli_lifecycle_hooks.py  test_cross_user_helper_pivot.py  test_discovery.py  test_git_remote.py  test_golden_image.py  test_guest_agent.py  test_hardening.py  test_isolation.py  test_lima_low_level.py  test_lite.py  test_m10_s4_discovery.py  test_m10_s5_presets.py  test_m1_vm_lifecycle.py  test_m2_guest_agent.py  test_m3_networking.py  test_m4_policy.py  test_m5_git_remote.py  test_m5_workspace.py  test_m6_hardening.py  test_m85_golden_image.py  test_m9_policy_persistence.py  test_networking.py  test_policy.py  test_policy_persistence.py  test_presets.py  test_vm_lifecycle.py  test_workspace.py  test_workspace_local.py  test_workspace_lock.py  test_workspace_shared_guest_path.py
tests/install-e2e/: .gitignore  README.md  build-local-tarball.sh  conftest.py  pyproject.toml  requirements.txt  test_build_assembly.py  test_container_backend_smoke.py  test_fixture_cache_invalidation.py  test_install_air_gapped.py  test_install_happy_path.py  test_install_idempotency.py  test_install_phase2.py  test_install_phase3.py  test_install_plan_and_gate.py  test_install_provision.py  test_install_refusal.py  test_install_repair.py  test_install_review_fixes.py  test_install_sigstore_refusals.py  test_install_upgrade_path.py  test_lib_sh_drift.py  test_peercred_isolation.py  test_sigstore_stack_smoke.py  test_systemd_smokes.py  test_uninstall.py  test_update_air_gapped.py  test_update_backup_retention.py  test_update_check.py  test_update_concurrent_refused.py  test_update_idempotency.py  test_update_multi_version.py  test_update_multi_version_skipped.py  test_update_preserves.py  test_update_recreate_classification.py  test_update_rejects_dev_install.py  test_update_rollback.py
(+236 files in other folders)
