[workspace]
members = [
    "sandboxd",
    "sandbox-cli",
    "sandbox-core",
    "sandbox-event-emitter",
    "sandbox-nft-allow-logger",
    "sandbox-nft-deny-logger",
    "sandbox-guest",
    "sandbox-route-helper",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
async-trait = "0.1"
# `ws` enables `axum::extract::ws::WebSocketUpgrade` so the daemon's
# `GET /sessions/{id}/proxy` endpoint can perform the standard
# HTTP-to-WebSocket upgrade handshake over the unix socket. The
# transitive `tokio-tungstenite` dependency that pulls in is the same
# library every other Rust WebSocket implementation in the ecosystem
# wraps; choosing the built-in axum surface avoids introducing a
# parallel WebSocket library.
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
enumset = { version = "1", features = ["serde"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
refinery = { version = "0.9", features = ["rusqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

base64 = "0.22"
rcgen = "0.14"
ring = "0.17"
schemars = "0.8"
semver = "1"
# `ssh-key` is the pure-Rust OpenSSH key implementation used by the
# daemon to generate and serialise per-session ed25519 keypairs for the
# cross-user SSH proxy (see the cross-user CLI access spec). Only the
# `ed25519` algorithm is exposed by the daemon API and `rand_core` is
# pulled in so callers can opt into the system RNG without enabling
# `ssh-key`'s default heavy feature set (ecdsa, rsa, etc.).
ssh-key = { version = "0.6", default-features = false, features = ["ed25519", "rand_core", "alloc", "getrandom"] }
tempfile = "3"
time = "0.3"

# Internal crates
sandbox-core = { path = "sandbox-core" }
