[package]
name = "sandbox-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "sandbox_cli"
path = "src/lib.rs"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
# `nix::unistd::{getgroups, getuid, Group, User}` powers `sandbox doctor`'s
# C4 (current user in `sandbox` group) check, which iterates the calling
# process's supplementary GIDs and resolves them to names. The `user`
# feature gates `Group`/`User`; sandbox-core and sandboxd already opt
# into the same feature flag so the workspace stays on one `nix`
# version.
nix = { version = "0.29", features = ["user"] }
sandbox-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
# axum provides the minimal HTTP/1.1 server used by the binary-level
# regression test in `tests/events_binary.rs` to pin the `sandbox events`
# (non-follow) process exit behavior. See the `Connection: close` +
# drop-order fix in `src/main.rs::stream_events_to_stdout`.
axum.workspace = true
tempfile.workspace = true
