[package]
name = "sandbox-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "sandbox_cli"
path = "src/lib.rs"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
# `nix::unistd::{getgroups, getuid, Group, User}` powers `sandbox doctor`'s
# C4 (current user in `sandbox` group) check, which iterates the calling
# process's supplementary GIDs and resolves them to names. The `user`
# feature gates `Group`/`User`; sandbox-core and sandboxd already opt
# into the same feature flag so the workspace stays on one `nix`
# version. The `fs` + `signal` features are pulled in by
# `sandbox-cli/src/update/lock.rs` for `nix::fcntl::{flock, FlockArg}`
# (non-blocking advisory lock on the update lock file) and
# `nix::sys::signal::kill` (the dead-PID probe — `kill(pid, 0)` returns
# Ok iff the process still exists, ESRCH/EPERM otherwise).
nix = { version = "0.29", features = ["user", "fs", "signal"] }
# `ring::digest::SHA256` powers the backup-set sha256 hashing (Spec 5
# § 3.2.15-17): each backup file's hash is captured in the manifest's
# `files` map and compared against the source for idempotent re-runs
# (skip copy when bytes already match). `ring` is already in the
# workspace dep set (used by sandbox-core for guest-agent hash, policy
# fingerprint, and CA material) so this pulls it through the existing
# workspace alias.
ring = { workspace = true }
sandbox-core.workspace = true
serde.workspace = true
serde_json.workspace = true
# `cfg_migrations::atomic_write` uses `NamedTempFile::new_in(parent) +
# persist(path)` to land each migration's output via rename(2) on the
# same filesystem (Spec 5 § 4.4). Tempfile was already a dev-dep here
# for the binary-level tests; promoted to a runtime dep because the
# migration framework's atomic-write path is production code.
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
# axum provides the minimal HTTP/1.1 server used by the binary-level
# regression test in `tests/events_binary.rs` to pin the `sandbox events`
# (non-follow) process exit behavior. See the `Connection: close` +
# drop-order fix in `src/main.rs::stream_events_to_stdout`.
axum.workspace = true
