[package]
name = "sandbox-cli"
version = "0.1.5"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "sandbox_cli"
path = "src/lib.rs"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
# `env = "…"` on #[arg] requires the clap `env` feature; without it the
# `.env()` builder method is absent and the attr silently degrades under
# workspace feature unification but fails when the crate is checked in
# isolation.  Mirrors the explicit opt-in in sandboxd/Cargo.toml.
clap = { workspace = true, features = ["env"] }
# `futures_util::{SinkExt, StreamExt}` are the extension traits the
# `sandbox proxy` shim uses to drive the `tokio-tungstenite`
# `WebSocketStream` (which implements `futures::Sink`/`Stream`, not
# `tokio`'s native shape). Default features are off because we only
# need the stream/sink extension traits, not the executor / I/O
# reexports — the daemon side already pulls this crate in with the
# same minimal feature set.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
# `nix::unistd::{getgroups, getuid, Group, User}` powers `sandbox doctor`'s
# C4 (current user in `sandbox` group) check, which iterates the calling
# process's supplementary GIDs and resolves them to names. The `user`
# feature gates `Group`/`User`; sandbox-core and sandboxd already opt
# into the same feature flag so the workspace stays on one `nix`
# version. The `fs` + `signal` features are pulled in by
# `sandbox-cli/src/update/lock.rs` for `nix::fcntl::{flock, FlockArg}`
# (non-blocking advisory lock on the update lock file) and
# `nix::sys::signal::kill` (the dead-PID probe — `kill(pid, 0)` returns
# Ok iff the process still exists, ESRCH/EPERM otherwise).
nix = { version = "0.29", features = ["user", "fs", "signal"] }
# `ring::digest::SHA256` powers the backup-set sha256 hashing:
# each backup file's hash is captured in the manifest's `files` map
# and compared against the source for idempotent re-runs
# (skip copy when bytes already match). `ring` is already in the
# workspace dep set (used by sandbox-core for guest-agent hash, policy
# fingerprint, and CA material) so this pulls it through the existing
# workspace alias.
ring = { workspace = true }
sandbox-core.workspace = true
# `scopeguard::guard` powers the release-on-cancel guard wrapping
# rsync in `run_workspace_push_or_pull`: the workspace lock acquired
# from the daemon MUST be released on every exit path (success, rsync
# non-zero, panic, SIGINT, SIGTERM) so an interrupted push/pull does
# not strand the session in a locked state. scopeguard fires on
# normal-return + panic-unwind; the signal-handling arm of the
# `tokio::select!` race performs the same release inline before the
# CLI exits with the conventional 128+signo code. The crate is
# zero-dependency and already pulled in transitively via other
# workspace crates; pinning `"1"` accepts any 1.x release.
scopeguard = "1"
serde.workspace = true
serde_json.workspace = true
# `cfg_migrations::atomic_write` uses `NamedTempFile::new_in(parent) +
# persist(path)` to land each migration's output via rename(2) on the
# same filesystem. Tempfile was already a dev-dep here
# for the binary-level tests; promoted to a runtime dep because the
# migration framework's atomic-write path is production code.
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
# `tokio-tungstenite` is the WebSocket framing layer the
# `sandbox proxy <id>` hidden subcommand sits on top of: the CLI drives
# the HTTP/1.1 → WebSocket upgrade by hand through `hyper` (same
# Unix-socket client every other daemon API call uses) so it can run
# over the existing `UnixStream` rather than dialing TCP, then hands
# the upgraded stream to `WebSocketStream::from_raw_socket` to get a
# `Sink`/`Stream` over binary frames. Same version sandboxd's dev-deps
# pin (0.29). Default features are off (no TLS, no `connect`) because
# the daemon socket is Unix-local; the `handshake` feature is on
# because tungstenite's WebSocket-key generator is the canonical way
# to mint a Sec-WebSocket-Key nonce and it brings in the `http` types
# we already use for the request URI.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
tracing.workspace = true

[dev-dependencies]
# axum provides the minimal HTTP/1.1 server used by the binary-level
# regression test in `tests/events_binary.rs` to pin the `sandbox events`
# (non-follow) process exit behavior. See the `Connection: close` +
# drop-order fix in `src/main.rs::stream_events_to_stdout`.
axum.workspace = true
# `rusqlite` powers the WAL-safe backup unit test that opens a
# synthetic `.db` + `-wal` + `-shm` bundle (written by a daemon
# killed mid-write) and asserts the restored DB contains the most
# recent committed transaction. The workspace dep is shared with
# `sandbox-core` and `sandboxd`; `bundled` keeps the test
# hermetic against the host's libsqlite3 version.
rusqlite.workspace = true

# Optional features.
#
# `test-env-override` — opts the `sandbox update` Sigstore signature-
# verification path into honoring `SANDBOX_UPDATE_TEST_FULCIO_ROOT`,
# `SANDBOX_UPDATE_TEST_REKOR_URL`,
# `SANDBOX_UPDATE_TEST_REKOR_PUBLIC_KEY`, and
# `SANDBOX_UPDATE_TEST_CT_LOG_PUBLIC_KEY` so the install-e2e harness can
# point cosign at the local Sigstore stack. Default release builds
# ignore the env vars: an operator running a production-signed binary
# must not be able to substitute the cryptographic trust root through
# the process environment (an attacker with that level of access could
# silently install a tampered tarball under the same `sandbox update`
# flow). The install-e2e build pipeline (`tests/install-e2e/
# build-local-tarball.sh`) enables the feature so its locally-signed
# tarballs verify against the local stack. Mirrors the pattern on
# `sandbox-core`'s `test-env-override` (route-helper users.conf
# redirect).
[features]
test-env-override = []
