[package]
name = "sandbox-core"
version = "0.1.10"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
enumset.workspace = true
nix = { version = "0.29", features = ["user"] }
notify = "6"
rcgen.workspace = true
ring.workspace = true
refinery.workspace = true
tempfile.workspace = true
time.workspace = true
rusqlite.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
ssh-key.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }

# Optional features.
#
# `test-env-override` — opts route-helper-side users.conf path resolution
# into honoring the `SANDBOX_USERS_CONF` environment variable. Default
# builds of the route-helper crate ignore the env var (production
# privilege boundary: a uid 0 file capability'd binary must not be
# redirectable to an attacker-controlled config file via a process-
# environment variable). The route-helper integration tests opt into the
# feature so they can drive the helper's authorization flow with a
# tempfile users.conf they own. The daemon-side load path
# (`users_conf_path()` / `load_users_config()`) is unaffected by this
# feature — the daemon is not the privilege boundary, only the cap'd
# helper is.
[features]
test-env-override = []
