[package]
name = "sandbox-deny-logger"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# The deny-logger ships as a single static binary that runs alongside
# Envoy / CoreDNS / mitmproxy inside the gateway container (spec Part 3
# / "Deny-logger component"). No library surface is needed.
[[bin]]
name = "sandbox-deny-logger"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
# The workspace clap has only `derive`; we need `env` here for the
# `SANDBOX_DENY_LOGGER_RATE_CAP` / `..._CONN_CAP` fallbacks. Opting into
# the extra feature on this single consumer keeps the workspace default
# minimal.
clap = { workspace = true, features = ["env"] }
nix = { version = "0.29", features = ["net", "socket", "uio"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
