[package]
name = "sandbox-deny-logger"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# The deny-logger ships as a single static binary that runs alongside
# Envoy / CoreDNS / mitmproxy inside the gateway container (spec Part 3
# / "Deny-logger component"). No library surface is needed.
[[bin]]
name = "sandbox-deny-logger"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
# The workspace clap has only `derive`; we need `env` here for the
# `SANDBOX_DENY_LOGGER_RATE_CAP` / `..._CONN_CAP` fallbacks. Opting into
# the extra feature on this single consumer keeps the workspace default
# minimal.
clap = { workspace = true, features = ["env"] }
nix = { version = "0.29", features = ["net", "socket", "uio"] }
# Direct socket2 use lets us set an explicit `listen()` backlog (the
# tokio TcpListener API uses libc's SOMAXCONN and gives no knob).
# Picking the backlog at the call site lets the deterministic
# `tcp_respects_concurrency_cap` test ensure the kernel's accept
# queue is large enough for its burst, eliminating the
# retry-on-ECONNREFUSED dance the M11-S5 test had to do.
socket2 = "0.6"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Conntrack pre-DNAT recovery for the UDP deny-logger (M12-S1, todo
# #29). The deny-logger sends an IPCTNL_MSG_CT_GET keyed on the
# post-DNAT REPLY tuple to recover CTA_TUPLE_ORIG.dst (the pre-DNAT
# destination the VM dialled).
#
# Crate choice rationale:
#   1. `nfct` / libnetfilter_conntrack (C FFI): rejected. The gateway
#      runtime image is `debian:bookworm-slim` with no libmnl /
#      libnetfilter_conntrack installed; pulling those C libs would
#      bloat the image and add a glibc-version coupling.
#   2. `conntrack` crate (rusty-bolt/conntrack-rs): rejected. Only
#      exposes `dump()` (full-table walk), unacceptable per-datagram
#      cost under a deny storm.
#   3. `netlink-packet-netfilter` (rust-netlink, pure Rust): rejected
#      *for the published version*. v0.2.0 on crates.io has only nflog
#      support; conntrack landed only on `main` (unreleased). Pinning
#      to a git rev for a security-sensitive crate adds supply-chain
#      risk we'd rather avoid.
#   4. Hand-rolled NFNL_SUBSYS_CTNETLINK encoding via `netlink-sys`
#      (chosen). The wire format is stable kernel ABI documented in
#      `linux/netfilter/nfnetlink_conntrack.h`; ~200 LOC of emit/parse
#      with full hermetic test coverage. `netlink-sys` provides only
#      the NETLINK_NETFILTER socket. Revisit once
#      netlink-packet-netfilter ships conntrack to crates.io — at
#      which point the encode/decode in `src/conntrack.rs` is a thin
#      adaptor on top of typed messages.
netlink-sys = "0.8"
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
