[package]
name = "sandbox-guest"
version = "0.1.8"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sandbox-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
