[package]
name = "sandbox-route-helper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "sandbox-route-helper"
path = "src/main.rs"

[features]
# `test-env-override` — opts the helper-side users.conf path resolution
# (`sandbox_core::users_conf::route_helper_users_conf_path`) into
# honoring the `SANDBOX_USERS_CONF` environment variable. Default
# builds ignore the env var; the cap'd helper binary must not be
# redirectable to an attacker-controlled config file via a process-
# environment variable.
#
# The `route-helper` integration-test target enables this feature
# explicitly so the tests can install their tempfile config via the
# env var. See `Makefile`'s `install-route-helper-test-cap` target.
test-env-override = ["sandbox-core/test-env-override"]

[dependencies]
sandbox-core.workspace = true
# Feature set:
#   - "user"  — `User::from_uid` for stderr name lookup; transitively
#               required by `sandbox-core`'s `SubnetEntry::allows_uid`.
#   - "sched" — `setns(fd, CLONE_NEWNET)` to enter the container netns.
#   - "net"   — `getifaddrs()` to enumerate netns IPv4 addresses (step 6).
# `pidfd_open(2)` is NOT exposed by nix 0.29 (no module, no feature
# gate); we invoke it via `libc::syscall(SYS_pidfd_open, ...)` instead.
nix = { version = "0.29", features = ["user", "sched", "net"] }
# Required only for the direct `pidfd_open` syscall and the matching
# errno read. The rest of the crate uses nix wrappers.
libc = "0.2"

[dev-dependencies]
# Used by the integration tests to checksum the installed cap'd
# binary against the cargo-built one — a mismatch means the
# operator rebuilt without re-installing, so the tests would be
# exercising a stale binary.
ring.workspace = true
tempfile.workspace = true
